fix songCard styling. increase contrast

--- a/src/components/SongCard/SongCard.css
+++ b/src/components/SongCard/SongCard.css
@@ -11,12 +11,6 @@
     position: relative;
 }
 
-/* .songCard:hover {
-    transition: all 0.3s ease-in-out;
-    background-color: #333;
-    box-shadow: 0px 8px 15px -16px rgba(255, 255, 255, 0.72);
-}
- */
 .songCard .songCardIcons {
     height: 70px;
     width: 20px;
@@ -30,8 +24,6 @@
     align-items: center;
     padding: 0 6px;
     transition: all 0.5s ease-in-out;
-    /* box-shadow: inset 0px -12px 29px 6px rgb(241 241 241 / 0%),
-        inset 40px 0px 14px -5px rgb(0 0 0 / 71%);*/
 }
 
 .songImgContainer {
@@ -122,25 +114,16 @@
         display: block;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: transparent;
+        z-index: 2;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 }
 
-.songCard:hover .songCardImg img::after {
+.songCard:hover .songCardImg button::after {
     background-color: rgba(0, 0, 0, 0.5);
-}
-
-.songCard .songCardImg img::after {
-    transition: all 300ms;
-    content: '';
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    z-index: 2;
-    position: absolute;
-    left: 0;
-    top: 0;
 }
 
 .songCardImg img {
